Internal change
PiperOrigin-RevId: 617040040